# rusl

./: .cargo  .gitignore  Cargo.toml  Makefile  README.md  apt.txt
arch/: CortexM.mk  CortexM0.mk  CortexM3.mk  CortexM4.mk  CortexM4F.mk
config/: Cargo.toml
config/src/: config.rs
cpu/: LM3S6965.ld  STM32F100RB.ld  STM32F100RB.mk
embed/: Cargo.toml
embed/.cargo/: config.toml
embed/src/: embed.rs
gui/: Cargo.toml
gui/src/: gui.rs
hw/: stm32vldiscovery.mk
media/: Cargo.toml
media/src/: media.rs
server/: Cargo.toml
server/src/: server.rs
server/static/: index.html  manifest
src/: config.rs  forth.rs  game.rs  main.rs  tutorial.rs
