[package]
name         = "config"
description  = "shared configuration"
version      = "0.0.1"
authors      = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
repository   = "https://github.com/ponyatov/rusl"
license      = "MIT"
readme       = "README.md"
edition      = "2021"
rust-version = "1.80"

[dependencies]
const_format = "0.2.32"

[lib]
path = "src/config.rs"
