[package]
name         = "gui"
description  = "GUI workout"
version      = "0.0.1"
authors      = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
repository   = "https://github.com/ponyatov/rusl"
license      = "MIT"
readme       = "README.md"
edition      = "2021"
rust-version = "1.80"

[dependencies]
config = { path = "../config" }

[[bin]]
name = "gui"
path = "src/gui.rs"
