[package]
name         = "media"
description  = "end-node media player"
version      = "0.0.1"
authors      = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
repository   = "https://github.com/ponyatov/rusl"
license      = "MIT"
readme       = "README.md"
edition      = "2021"
rust-version = "1.80"

[dependencies]
config = { path = "../config" }
sdl2 = {version = "^0.37.0", features = ["use-pkgconfig"]}

[[bin]]
name = "media"
path = "src/media.rs"
