[package]
name         = "server"
description  = "tiny http management server"
version      = "0.0.1"
authors      = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
repository   = "https://github.com/ponyatov/rusl"
license      = "MIT"
readme       = "README.md"
edition      = "2021"
rust-version = "1.80"

[dependencies]

[[bin]]
name = "server"
path = "src/server.rs"
