[package]
name         = "server"
description  = "tiny http management server"
version      = "0.0.1"
authors      = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
repository   = "https://github.com/ponyatov/rusl"
license      = "MIT"
readme       = "README.md"
edition      = "2021"
rust-version = "1.80"

[dependencies]
config = { path = "../config" }
iron = "0.6.1"
mime = "^0.2"

[[bin]]
name = "server"
path = "src/server.rs"
